--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			<div class="image-wrapper" data-image-wrapper>
 				<div class="image-container" data-image-container>
 					<img
-						src="http://www.elimdengelenbudur.com//Downloads/large-1.jpg"
+						src="https://cdn.pixabay.com/photo/2017/08/31/05/36/new-york-2699520_1280.jpg"
 						data-zoom
 						data-zoom-position="right"
 						data-zoom-factor="2"
@@ -22,7 +22,7 @@
 			<div class="image-wrapper" data-image-wrapper>
 				<div class="image-container" data-image-container>
 					<img
-						src="http://www.elimdengelenbudur.com//Downloads/large.jpg"
+						src="https://cdn.pixabay.com/photo/2017/08/31/05/36/new-york-2699520_1280.jpg"
 						data-zoom
 						data-zoom-position="top"
 						data-zoom-factor="14"
