--- a/demo.html
+++ b/demo.html
@@ -2,7 +2,7 @@
 	<head>
 		<title>Zoom</title>
 		 <meta charset="UTF-8">
-		<link type="text/css" rel="stylesheet" href="css/all.css" />
+		<link type="text/css" rel="stylesheet" href="css/image-zoom.css" />
 		<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 	</head>
 	<body>
@@ -33,5 +33,5 @@
 			</div>
 		</div>
 	</body>
-	<script language="javascript" type="text/javascript" src="js/all.js"></script>
+	<script language="javascript" type="text/javascript" src="js/image-zoom.js"></script>
 </html>
